--- a/gu.html
+++ b/gu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janus GPS Fix Visualization</title>
+    <title>Janus GPS Fix</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -237,7 +237,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Janus GPS Fix Visualization</h1>
+            <h1>Janus GPS Fix</h1>
         </div>
         
         <div class="controls">
